--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -63,7 +64,9 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "0.0.13",
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-named-exports-order": "0.0.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "prop-types": "^15.8.1",
     "webpack": "^5.75.0"
   }
